--- a/app/scss/header.scss
+++ b/app/scss/header.scss
@@ -23,6 +23,7 @@
     border: 1px solid $gray4;
     border-radius: 5px;
     overflow: hidden;
+    vertical-align: middle;
     
     label {
 
